# pupper

./: Cargo.toml  LICENSE.md  README.md
src/: create.rs  main.rs  print.rs  seg.rs
src/lib/: header.rs  lib.rs
src/lib/header/: digest.rs  meta.rs  seg.rs  sig.rs  table.rs
src/seg/: extract.rs  insert.rs  remove.rs
